[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Menu.gd" type="Script" id=1]
[ext_resource path="res://art/menu e créditos/menu.png" type="Texture" id=2]
[ext_resource path="res://art/menu e créditos/botão 1.png" type="Texture" id=3]
[ext_resource path="res://art/menu e créditos/botão 1 pressionado.png" type="Texture" id=4]
[ext_resource path="res://art/menu e créditos/botão claro 1.png" type="Texture" id=5]
[ext_resource path="res://art/menu e créditos/botão 2.png" type="Texture" id=6]
[ext_resource path="res://art/menu e créditos/botão 2 pressionado.png" type="Texture" id=7]
[ext_resource path="res://art/menu e créditos/botão claro 2.png" type="Texture" id=8]

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="PlayButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="CreditsButton" type="TextureButton" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 103.0
margin_right = 96.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]


